app/k8s/gatekeeper/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepos
metadata:
  name: allow-only-gcr
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
